deployment-rq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-rq-deployment
  namespace: api
  labels:
    app: rq
    env: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rq
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: sample-rq-pod
      labels:
        app: rq
    spec:
        ##################
      containers:
      - name: hangfive-rq
        image: ""
        securityContext:
          privileged: false
          readOnlyRootFilesystem: false
          allowPrivilegeEscalation: false
