service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api-service
  namespace: api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
#    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-west-2:<>:certificate/<>
#    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 80
#  - name: https
#    port: 443
#    targetPort: 80
